Update to jboss-modules-1.0.0.CR2